feat(refactor) : contrato + testes + mappers, n/a
